Validações e tratamento de erro de requisições implementado