@@ -1,34 +1,45 @@
 package com.alura.aurelio.videosbackend.domain;
 
+import java.util.ArrayList;
+import java.util.List;
+
+//import org.springframework.util.StringUtils;
+
+import com.alura.aurelio.videosbackend.infra.CustomException;
+
 import lombok.AllArgsConstructor;
+import io.micrometer.common.util.StringUtils;
 import lombok.Data;
-import lombok.NoArgsConstructor;
 
 @Data
-@NoArgsConstructor
 @AllArgsConstructor
 public class VideoInputDTO {
 	
-	
 	private String titulo;
-	
 	
 	private String descricao;
 	
-	
 	private String url;
 	
-	public Video toVideo() throws Exception {
-		
-		if(this.titulo.equals(null)
-			|| this.titulo.isBlank()
-			|| this.titulo.isEmpty()) {
-				throw new Exception("blop");
+	public Video toVideo() throws CustomException  {
+		validaDTO();
+		return new Video(null, this.titulo, this.descricao, this.url);
+	}
+
+	private void validaDTO() {
+		List<String> erros = new ArrayList<>();
+	
+		if(StringUtils.isEmpty(getTitulo()) || StringUtils.isBlank(getTitulo())) {
+			erros.add("Título do vídeo não pode ser nulo ou vazio.");
 		}
 		
-		return new Video(null ,this.titulo, this.descricao, this.url);
+		if(StringUtils.isEmpty(getUrl()) || StringUtils.isBlank(getUrl())) {
+			erros.add("Url do vídeo não pode ser nula ou vazia.");
+		}
+		
+		if(!erros.isEmpty()) {
+			throw new CustomException("Esta requisição apresentou os seguintes erros: ", erros);
+		}
 	}
-	
-	//TODO: implementar validaTitulo e validaUrl
 	
 }
